--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "tape": "^3.0.3"
   },
   "dependencies": {
-    "cipher-base": "^1.0.3",
+    "cipher-base": "https://github.com/toth2000/cipher-base.git",
     "create-hash": "^1.1.0",
     "inherits": "^2.0.1",
     "ripemd160": "^2.0.0",
